Update redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://avirgard.github.io/kamkaro.github.io/">
+    <meta http-equiv="refresh" content="0; url=https://abeergarg.github.io/Framkaro.github.io/">
     <link rel="canonical" href="https://abeergarg.github.io/Farmkaro.github.io/">
     <title>Redirecting…</title>
   </head>
