--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="refresh" content="0; url=https://abeergarg.github.io/Framkaro.github.io/">
     <link rel="canonical" href="https://abeergarg.github.io/Farmkaro.github.io/">
     <title>Redirecting…</title>
+
+     <script>
+    window.location.replace("https://avirgard.github.io/kamkaro.github.io/");
+     </script>
+    
   </head>
   <body>
     <p>Redirecting to new site…Create by Abeer Garg</p>
