--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Redirecting…</title>
 
      <script>
-    window.location.replace("https://avirgard.github.io/kamkaro.github.io/");
+    window.location.replace("https://abeergarg.github.io/Framkaro.github.io/");
      </script>
     
   </head>
